force-app/main/default/objects/HFS_Country_Data__c/HFS_Country_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country data used from several parts of the org&apos;s code</description>
    <label>Country Data</label>
</CustomObject>