force-app/main/default/objects/HFS_Country_Data__c/fields/HFS_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>HFS_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>