force-app/main/default/objects/HFS_Country_Data__c/fields/HFS_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>HFS_Country_Name__c</fullName>
    <label>Country Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>