force-app/main/default/objects/HFS_Country_Data__c/fields/HFS_Default_Option__c.field-meta.xml
<CustomField>
    <fullName>HFS_Default_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the country has to be shown as a default option on top of the picklist options separated from the non  default options</description>
    <inlineHelpText>Indicates that the country has to be shown as a default option on top of the picklist options separated from the non  default options</inlineHelpText>
    <label>Default Option</label>
    <type>Checkbox</type>
</CustomField>